# EDGEFORGE

./: .coverage  .gitignore  AGENTS.md  LICENSE  README.md  generate_mock_model.py  pyproject.toml  test_model.onnx
edgeforge/: pipeline.py
edgeforge/cli/: dashboard.py  main.py
edgeforge/cli/commands/: deploy.py  verify.py  (+1 more)
edgeforge/core/: arch_detector.py  model_loader.py  validator.py
edgeforge/hardware/: base_optimizer.py  onnx_optimizer.py  optimizer_factory.py  tensorrt_optimizer.py  vitis_optimizer.py
edgeforge/packaging/: air_gap_packager.py
edgeforge/quantization/: adaptive_quant.py
edgeforge/security/: audit_logger.py
pkg_2222b861-6d87-4b1a-b289-45250d42e2df/: manifest.json
pkg_2222b861-6d87-4b1a-b289-45250d42e2df/model/: config.yaml  integ_model_quant.engine
pkg_2222b861-6d87-4b1a-b289-45250d42e2df/security/: audit_log.json
pkg_4cc1c88b-794d-4a60-8c78-8eb3471ca61a/: manifest.json
pkg_4cc1c88b-794d-4a60-8c78-8eb3471ca61a/model/: config.yaml
pkg_4cc1c88b-794d-4a60-8c78-8eb3471ca61a/security/: audit_log.json
pkg_6f086902-21d1-4f37-b640-1caa5d1d85a9/: manifest.json
pkg_6f086902-21d1-4f37-b640-1caa5d1d85a9/model/: config.yaml  model.engine
pkg_6f086902-21d1-4f37-b640-1caa5d1d85a9/security/: audit_log.json
pkg_755003a8-90e6-4001-b40f-f911b146e5bf/: manifest.json
pkg_755003a8-90e6-4001-b40f-f911b146e5bf/model/: config.yaml  test_model_quant.xmodel
pkg_755003a8-90e6-4001-b40f-f911b146e5bf/security/: audit_log.json
pkg_98a353cf-2f9b-4cd5-8ce3-dbd69ad2dac9/: manifest.json
pkg_98a353cf-2f9b-4cd5-8ce3-dbd69ad2dac9/model/: config.yaml
(+12 files in other folders)
